<resources>
    <string name="app_name">Contactos</string>
    <string name="txt_nombre">Nombre del contacto</string>
    <string name="txt_twitter">Twitter</string>
    <string name="txt_correo">Correo</string>
    <string name="txt_telefono">Teléfono</string>
    <string name="txt_fecha">Fecha nacimiento</string>
    <string name="label_nombre">Nombre:</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_agregar">Agregar contacto</string>
    <string name="buton1_menu_opt1">Borrar</string>
    <string name="buton1_menu_opt2">Editar</string>

</resources>
