<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Agregar">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="339dp">

        <EditText
            android:id="@+id/txt_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_nombre"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/txt_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_telefono"
            android:inputType="phone"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/txt_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_correo"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/txt_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_fecha"
            android:inputType="date"
            android:autofillHints="" />


        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:text="@string/btn_guardar" />
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>